--- a/System_programming_lab_project/docs/latex/memory_8h_source.tex
+++ b/System_programming_lab_project/docs/latex/memory_8h_source.tex
@@ -68,9 +68,9 @@
 \DoxyCodeLine{90 \textcolor{keywordtype}{void} \mbox{\hyperlink{memory_8h_a3336aa8be04b4a57da3ac881aa13e399}{set\_image\_memory}}(\mbox{\hyperlink{structimage_memory}{imageMemory}}* mem, \textcolor{keywordtype}{unsigned} \textcolor{keywordtype}{char} bytes, \textcolor{keywordtype}{int} \mbox{\hyperlink{structflags}{flags}});}
 \DoxyCodeLine{91 }
 \DoxyCodeLine{92 }
-\DoxyCodeLine{97 \textcolor{keyword}{static} \mbox{\hyperlink{structimage_memory}{imageMemory}} image\_memory\_get\_new();}
+\DoxyCodeLine{97 \textcolor{keyword}{static} \mbox{\hyperlink{structimage_memory}{imageMemory}} \mbox{\hyperlink{memory_8c_af258129e28dea9a2451dd46c78918ad8}{image\_memory\_get\_new}}();}
 \DoxyCodeLine{98 }
-\DoxyCodeLine{102 \textcolor{keyword}{static} \textcolor{keywordtype}{void} image\_memory\_init(\mbox{\hyperlink{structimage_memory}{imageMemory}}* mem);}
+\DoxyCodeLine{102 \textcolor{keyword}{static} \textcolor{keywordtype}{void} \mbox{\hyperlink{memory_8c_a201369fd1364dfd09ac9e80dc293e01c}{image\_memory\_init}}(\mbox{\hyperlink{structimage_memory}{imageMemory}}* mem);}
 \DoxyCodeLine{103 }
 \DoxyCodeLine{105 \textcolor{keywordtype}{void} \mbox{\hyperlink{memory_8h_a93e3f81e0962233b51525ba94b65b497}{set\_era\_bits}}(\mbox{\hyperlink{struct_memory_word}{MemoryWord}}* mem, \textcolor{keywordtype}{unsigned} \textcolor{keywordtype}{char} \textcolor{keywordtype}{byte});}
 \DoxyCodeLine{106 }
