--- a/System_programming_lab_project/docs/latex/refman.tex
+++ b/System_programming_lab_project/docs/latex/refman.tex
@@ -207,15 +207,20 @@
 \input{driver_8c}
 \input{driver_8h}
 \input{driver_8h_source}
+\input{encoding_8c}
 \input{encoding_8h}
 \input{encoding_8h_source}
+\input{first__pass_8c}
 \input{first__pass_8h}
 \input{first__pass_8h_source}
 \input{line__iterator_8c}
 \input{line__iterator_8h}
 \input{line__iterator_8h_source}
+\input{main_8c}
+\input{memory_8c}
 \input{memory_8h}
 \input{memory_8h_source}
+\input{pre__assembler_8c}
 \input{pre__assembler_8h}
 \input{pre__assembler_8h_source}
 \input{second__pass_8c}
