--- a/System_programming_lab_project/docs/latex/files.tex
+++ b/System_programming_lab_project/docs/latex/files.tex
@@ -5,11 +5,16 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{\mbox{\hyperlink{debug_8h}{debug.\+h}} }{\pageref{debug_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{driver_8c}{driver.\+c}} }{\pageref{driver_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{driver_8h}{driver.\+h}} }{\pageref{driver_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{encoding_8c}{encoding.\+c}} }{\pageref{encoding_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{encoding_8h}{encoding.\+h}} }{\pageref{encoding_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{first__pass_8c}{first\+\_\+pass.\+c}} }{\pageref{first__pass_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{first__pass_8h}{first\+\_\+pass.\+h}} }{\pageref{first__pass_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{line__iterator_8c}{line\+\_\+iterator.\+c}} }{\pageref{line__iterator_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{line__iterator_8h}{line\+\_\+iterator.\+h}} }{\pageref{line__iterator_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{main_8c}{main.\+c}} }{\pageref{main_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{memory_8c}{memory.\+c}} }{\pageref{memory_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{memory_8h}{memory.\+h}} }{\pageref{memory_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{pre__assembler_8c}{pre\+\_\+assembler.\+c}} }{\pageref{pre__assembler_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{pre__assembler_8h}{pre\+\_\+assembler.\+h}} }{\pageref{pre__assembler_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{second__pass_8c}{second\+\_\+pass.\+c}} }{\pageref{second__pass_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{second__pass_8h}{second\+\_\+pass.\+h}} }{\pageref{second__pass_8h}}{}
